[package]
name = "bytecode"
version = "0.2.0"
edition = "2021"
authors = ["NaokiM03"]
description = "This library provides the ability to read bytecode."
keywords = ["bytecode", "utility"]
documentation = "https://docs.rs/bytecode"
repository = "https://github.com/NaokiM03/bytecode"
readme = "README.md"
license = "MIT"

[dependencies]
tiny-ansi = "0.1.0"
